css/style.css
/* ... */
#whitebox_secondary_submit li {
    margin-top: 10px;
    height: 25px;
}

#whitebox_secondary_submit {
    color: #666666;
}


#whitebox_secondary_submit label {
    width: 113px;
}


#whitebox_secondary_submit input[type="text"] {
    width: 199px;
    height: 23px;
}

#file_replace {
    background: url(../images/logo_file_replace.png);
    width: 203px;
    height: 25px;
    display: inline-block;
}

#whitebox_secondary_submit input#upload_file {
    width: 25px;
    height: 23px;
    vertical-align: top;
    opacity: 0;
    filter: alpha(opacity=0);
}

    #whitebox_secondary_submit_file label {
    vertical-align: -4px;
}

#whitebox_secondary_submit label[for="upload_agree"] {
    width: 179px;
    vertical-align: -4px;
}

#upload_agree {
    vertical-align: -5px;
}


input[name="upload_submit"], #whitebox_secondary_preview_submit input, #whitebox_secondary_finish button {
    height: 26px;
    padding: 0 6px;
}

input[name="upload_submit"] {
    float: right;
    margin-right: 4px;
}

.whitebox_secondary_back {
    height: auto;
    text-align: left;
    margin-top: 10px;
}


#whitebox_secondary_preview {
    text-align: center;
}

#whitebox_secondary_preview_letters {
    border-bottom: 2px solid #00AEEF;
    width: 190px;
    margin: 0 auto 10px;
}

#whitebox_secondary_preview_letters img {
    height: 42px;
    width: auto;
    margin: 0 5px -4px;
}

#whitebox_secondary_finish .big_and_bold {
    font-size: 15px;
    font-weight: bold;
}

#whitebox_secondary_finish button {
margin-top: 10px;
}

/************** LOGO ARCHIVE *************/

.bluebox_big_content_row {
    width: 742px;
    margin: 13px -12px 13px 0;
}

h3.expanded_letter {
    margin: 16px 0 10px;
}

.logo-archive .logo_project_letter {
    width: 91px;
    margin-right: 12px;
}


/************* OUR PRODUCTS *************/

.whitebox_big_category_entry {
    width: 220px;
    height: 175px;
    background-color: #B9E5FB;
    display: inline-block;
    vertical-align: top;
    margin-right: -1px;
    margin-left: 2px;
    margin-top: 5px;
    padding: 0 10px;
}

.whitebox_big_category_entry header {
    padding: 0;
}

.whitebox_big_category_entry_title {
    margin: 5px 0;
}

.whitebox_big_category_entry_title_name {
    color: #666666;
}

.whitebox_big_category_page {
    text-align: right;
    margin: 20px 0 10px;
}

.whitebox_big_category_entry_content {
    display: block;
    margin-top: 3px;
}

.whitebox_big_category_entry_content_overview {
    text-transform: none;
    font-size: 11px;
    padding: 30px;
    color: #666666;
    line-height: 16px;
    background: #ffffff;
}


.whitebox_big_category_entry_content_overview p {
    margin-top: 0;
}

/************** SINGLE PRODUCT ***********/

.whitebox_primary_section {
    margin: 10px 0;
}

.whitebox_primary_section span, .whitebox_primary_section div {
    display: inline-block;
    vertical-align: top;
}

.whitebox_primary_section_label {
    width: 60px;
}

.single-work .whitebox_primary_client, .single-product .whitebox_primary_project {
    margin-top: 0px;
}

.whitebox_primary_solution {
    margin: 10px 0;
}

.whitebox_primary_solution .whitebox_primary_section_label, .whitebox_primary_brief .whitebox_primary_section_label {
    line-height: 19px;
}

.whitebox_primary_section_content {
    width: 280px;
}


.whitebox_primary_solution .whitebox_primary_section_content p:first-child {
    margin-top: 0;
}

.ngg-gallery-thumbnail {
    margin: 0!important;
}

.ngg-gallery-thumbnail img {
    padding: 0!important;
    border: none!important;
    margin: 0!important;
}

.ngg-gallery-thumbnail-box {
    display: inline-block;
    margin-left: 9px;
}

a.page-numbers, .ngg-navigation span {
    display: none;
}

.ngg-galleryoverview {
    margin-top: 8px!important;
    margin-left: -9px;
    width: 328px!important;
}

a.next, a.prev {
    border: none!important;
    color: #6CF!important;
    padding: 0!important;
}

.next {
    float: right;
}

.piclenselink {
    display: none;
}

.bluebox_bigpic {
    margin: 4px 0 5px;
}

.ngg-navigation {
    font: 11px arial, sans-serif;
    margin-top: 10px;
    margin-left: 10px;
    text-align: left!important;
    padding-top: 5px!important;
}

/************** CONTACT ****************/

p.top_margin_22px {
    margin-top: 22px;
}

.contact form.wpcf7-form {
    font: 10px arial, san-serif;
    text-transform: uppercase;
    margin-top: 20px;
}

.contact form.wpcf7-form input {
    height: 25px;
    width: 219px;
}


.contact form.wpcf7-form p {
    margin-bottom: -18px;
}


.contact form.wpcf7-form p#contact_submit {
    margin-bottom: 0;
}


.contact form.wpcf7-form input[type="submit"] {
    height: 26px;
    width: 52px;
    left: 139px;
    top: -12px;
    position: relative;
}

.contact form.wpcf7-form textarea {
    width: 219px;
}


.contact form.wpcf7-form span {
    left: 139px;
    top: -23px;
}

#bluebox_map {
    margin-top: 10px;
}

/************** BLOG *******************/

.whitebox_big_search a {
    color: #666666;
}

.whitebox_big_search input {
    width: 280px;
    height: 25px;
    margin-left: 10px;
}

.whitebox_big_search {
    float: right;
}

.blog_whitebox_primary {
    margin-top: 20px;
}


.blog-single .whitebox_primary_post h3, .blog .whitebox_primary_post h3 {
    font-size: 24px;
}

.blog_bluebox_primary {
    margin-left: 0;
}


.blog .other_posts_content_three li {
    background: url(../images/whitebox_secondary_body_content_two_list.png) no-repeat 0px 5px;
}

.blog .other_posts li a {
    color: #666666;
}

.other_posts .bluebox_primary {
    width: 323px;
    padding-right: 10px;
}

/************** BLOG SINGLE ************/

.blog-single .whitebox_primary_post_attr {
    width: 179px;
    display: inline-block;
    vertical-align: top;
}

.blog-single .whitebox_primary_post_attr div {
    margin-bottom: 5px;
    display: block;
}

.whitebox_primary_share {
    width:100px;
    display: inline-block;
    vertical-align: top;
    margin: 10px 0 0 75px;
}
/* ... */

